# rust_axum_sample

./: Cargo.toml
src/: main.rs  middlewares.rs  routes.rs
src/middlewares/: header_auth_check.rs  test_only.rs
src/routes/: root.rs  test.rs
